--- a/project.json
+++ b/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "@contential-js/source",
+  "name": "contential-js",
   "$schema": "node_modules/nx/schemas/project-schema.json",
   "targets": {
     "local-registry": {
