--- a/packages/contential/package.json
+++ b/packages/contential/package.json
@@ -1,6 +1,6 @@
 {
   "name": "contential",
-  "description": "Contential",
+  "description": "Contential JavaScript",
   "version": "0.0.30",
   "module": "module",
   "private": false
