--- a/.github/workflows/publish.prod.yaml
+++ b/.github/workflows/publish.prod.yaml
@@ -14,8 +14,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Fetch main
-        run: git fetch origin main
+      # - name: Fetch main
+      #   run: git fetch origin main
 
       - name: Use Node 18
         uses: actions/setup-node@v2
