--- a/packages/contential/package.json
+++ b/packages/contential/package.json
@@ -1,7 +1,26 @@
 {
   "name": "contential",
-  "description": "Contential JavaScript",
   "version": "0.0.31",
-  "module": "module",
-  "private": false
+  "files": [
+    "dist/*"
+  ],
+  "typesVersions": {
+    "*": {
+      "*": [
+        "dist/*"
+      ]
+    }
+  },
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.js"
+    },
+    "./*.js": {
+      "types": "./dist/*.d.ts",
+      "import": "./dist/*.js",
+      "require": "./dist/*.js"
+    }
+  }
 }
