--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "typescript": "~5.1.6",
     "verdaccio": "^5.0.4",
     "vite": "~4.3.9",
+    "vite-plugin-dts": "~2.3.0",
     "vite-tsconfig-paths": "~4.2.0",
     "vitest": "~0.32.0"
   },
   "nx": {
     "includedScripts": []
-  }
+  },
+  "dependencies": {}
 }
