--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@contential/api",
+  "description": "Contential - API Client",
   "version": "0.0.8",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
