--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "build": "nx run-many --target=build --all",
     "dev": "nx run-many --target=dev --all",
+    "build": "nx run-many --target=build --all",
+    "affected": "nx show projects --affected",
+    "affected:build": "nx affected:build",
     "workspace:dev": "cp pnpm-workspace.dev.yaml pnpm-workspace.yaml",
     "workspace:release": "cp pnpm-workspace.release.yaml pnpm-workspace.yaml",
     "changeset": "changeset",
