--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,7 +1,7 @@
 name: Release
 
 on:
-  push:
+  pull_request:
     branches: [main]
 
 jobs:
@@ -37,20 +37,7 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Affected
-        run: pnpm affected --base=origin/main~1
+        run: pnpm affected --base=origin/main
 
       - name: Build
-        run: pnpm affected:build --base=origin/main~1 --verbose
-
-      - name: Workspace release file
-        run: pnpm workspace:release
-
-      - name: Create pull request or publish
-        id: changesets
-        uses: changesets/action@v1
-        with:
-          publish: pnpm release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_ACCESS_TOKEN }}
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_ACCESS_TOKEN }}
+        run: pnpm affected:build --base=origin/main --verbose
