--- a/packages/contential/package.json
+++ b/packages/contential/package.json
@@ -1,6 +1,6 @@
 {
   "name": "contential",
-  "description": "Contential",
+  "description": "Contential - JavaScript Client",
   "version": "0.0.39",
   "typesVersions": {
     "*": {
