--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "nx run-many --target=build --all",
     "affected": "nx show projects --affected --exclude contential-js",
     "affected:build": "nx affected:build",
-    "workspace:dev": "cp pnpm-workspace.dev.yaml pnpm-workspace.yaml",
-    "workspace:release": "cp pnpm-workspace.release.yaml pnpm-workspace.yaml",
+    "workspace:dev": "cp pnpm/pnpm-workspace.dev.yaml pnpm-workspace.yaml",
+    "workspace:release": "cp pnpm/pnpm-workspace.release.yaml pnpm-workspace.yaml",
     "changeset": "changeset",
     "release": "changeset publish"
   },
