--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@nx/linter": "16.5.3",
     "@nx/vite": "16.5.3",
     "@nx/workspace": "16.5.3",
-    "@types/node": "18.7.1",
+    "@types/node": "18",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "@vitest/coverage-c8": "~0.32.0",
@@ -40,5 +40,7 @@
   "nx": {
     "includedScripts": []
   },
-  "dependencies": {}
+  "dependencies": {
+    "axios": "^1.4.0"
+  }
 }
