--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "license": "MIT",
   "scripts": {
     "dev": "nx run-many --target=dev --all",
+    "test": "nx run-many --target=test --all",
     "build": "nx run-many --target=build --all",
     "affected": "nx show projects --affected --exclude contential-js",
     "affected:build": "nx affected:build",
+    "affected:test": "nx affected:test",
     "workspace:dev": "cp pnpm/pnpm-workspace.dev.yaml pnpm-workspace.yaml",
     "workspace:release": "cp pnpm/pnpm-workspace.release.yaml pnpm-workspace.yaml",
     "changeset": "changeset",
@@ -20,7 +22,7 @@
     "@nx/linter": "16.5.3",
     "@nx/vite": "16.5.3",
     "@nx/workspace": "16.5.3",
-    "@types/node": "18",
+    "@types/node": "18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "@vitest/coverage-c8": "~0.32.0",
