--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "dev": "nx run-many --target=dev --all",
     "test": "nx run-many --target=test --all",
     "build": "nx run-many --target=build --all",
-    "affected": "nx show projects --affected --exclude contential-js",
-    "affected:build": "nx affected:build",
-    "affected:test": "nx affected:test",
+    "affected": "nx show projects --affected --exclude contential-js demo*",
+    "affected:build": "nx affected:build --exclude demo*",
+    "affected:test": "nx affected:test --exclude demo*",
     "workspace:dev": "cp pnpm/pnpm-workspace.dev.yaml pnpm-workspace.yaml",
     "workspace:release": "cp pnpm/pnpm-workspace.release.yaml pnpm-workspace.yaml",
     "changeset": "changeset",
