--- a/package.json
+++ b/package.json
@@ -17,20 +17,40 @@
   "private": true,
   "devDependencies": {
     "@changesets/cli": "^2.26.2",
+    "@nx/cypress": "16.5.3",
     "@nx/eslint-plugin": "16.5.3",
+    "@nx/jest": "16.5.3",
     "@nx/js": "16.5.3",
     "@nx/linter": "16.5.3",
+    "@nx/next": "^16.5.3",
+    "@nx/react": "16.5.3",
     "@nx/vite": "16.5.3",
     "@nx/workspace": "16.5.3",
-    "@types/node": "18.7.1",
+    "@testing-library/react": "14.0.0",
+    "@types/jest": "^29.4.0",
+    "@types/node": "18.14.2",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "@vitest/coverage-c8": "~0.32.0",
     "@vitest/ui": "~0.32.0",
+    "babel-jest": "^29.4.1",
+    "cypress": "^12.16.0",
     "eslint": "~8.15.0",
+    "eslint-config-next": "13.4.1",
     "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
     "nx": "16.5.3",
     "prettier": "^2.6.2",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
     "tslib": "^2.6.0",
     "typescript": "~5.1.6",
     "verdaccio": "^5.0.4",
@@ -43,6 +63,9 @@
     "includedScripts": []
   },
   "dependencies": {
-    "axios": "^1.4.0"
+    "axios": "^1.4.0",
+    "next": "13.4.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
