--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,11 +14,7 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {
-      "@contential/api": ["packages/api/src/index.ts"],
-      "@contential/prompt": ["packages/prompt/src/index.ts"],
-      "contential": ["packages/contential/src/index.ts"]
-    }
+    "paths": {}
   },
   "exclude": ["node_modules", "tmp"]
 }
