--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -39,18 +39,18 @@ jobs:
       - name: Affected
         run: pnpm affected --base=origin/main~1
 
-      # - name: Build
-      #   run: pnpm affected:build --base=origin/main~1 --verbose
+      - name: Build
+        run: pnpm affected:build --base=origin/main~1 --verbose
 
-      # - name: Workspace release file
-      #   run: pnpm workspace:release
+      - name: Workspace release file
+        run: pnpm workspace:release
 
-      # - name: Create pull request or publish
-      #   id: changesets
-      #   uses: changesets/action@v1
-      #   with:
-      #     publish: pnpm release
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #     NPM_TOKEN: ${{ secrets.NPM_ACCESS_TOKEN }}
-      #     NODE_AUTH_TOKEN: ${{ secrets.NPM_ACCESS_TOKEN }}
+      - name: Create pull request or publish
+        id: changesets
+        uses: changesets/action@v1
+        with:
+          publish: pnpm release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_ACCESS_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_ACCESS_TOKEN }}
